--- a/ubuntu/Dockerfile.terraform
+++ b/ubuntu/Dockerfile.terraform
@@ -1,4 +1,4 @@
-FROM --platform linux/amd64 ubuntu:noble-20241011
+FROM --platform=linux/amd64 ubuntu:noble-20241011
 ENV DEBIAN_FRONTEND="noninteractive" 
 ADD ubuntu/config/ssh.tgz /root/
 ADD ubuntu/config/DIR_COLORS /etc/DIR_COLORS_ADAM
