--- a/ubuntu/Dockerfile.ubuntu
+++ b/ubuntu/Dockerfile.ubuntu
@@ -1,4 +1,4 @@
-FROM --platform=linux/amd64 ubuntu:noble-20241011
+FROM --platform=$BUILDPLATFORM ubuntu:rolling
 ENV DEBIAN_FRONTEND="noninteractive"
 
 ADD ubuntu/config/ssh.tgz /root/
